Fix spacing on contribs and commits.

--- a/css/blotter.less
+++ b/css/blotter.less
@@ -118,12 +118,12 @@ p {
 	font-weight: 300;
 }
 
-p.spacer {
-	height: 12px;
+.spacer {
+	height: 15px;
 }
 
-p.smallspacer {
-	height: 3px;
+.smallspacer {
+	height: 5px;
 }
 
 a.off { 
